--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -565,12 +565,14 @@
 	"edt_conf_fw_proto_itemtitle" : "Proto Ziel",
 	"edt_conf_js_heading_title" : "JSON Server",
 	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
+	"edt_conf_fbs_timeout_title" : "Zeitüberschreitung",
+	"edt_conf_fbs_timeout_expl" : "Wenn für die angegebene Zeit keine Daten empfangen werden, wird die Komponente (vorübergehend) deaktiviert",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Adresse",
 	"edt_conf_udpl_address_expl" : "Die Adresse auf der UDP Pakete akzeptiert werden.",
 	"edt_conf_udpl_timeout_title" : "Zeitüberschreitung",
-	"edt_conf_udpl_timeout_expl" : "Wenn für die angegeben Zeit keine UDP Pakete empfangen werden, wird die Komponente (vorübergehend) deaktiviert",
+	"edt_conf_udpl_timeout_expl" : "Wenn für die angegebene Zeit keine UDP Pakete empfangen werden, wird die Komponente (vorübergehend) deaktiviert",
 	"edt_conf_udpl_shared_title" : "Gemeinsam genutzt",
 	"edt_conf_udpl_shared_expl" : "Wird gemeinsam über alle Hyperion Instanzen genutzt.",
 	"edt_conf_webc_heading_title" : "Web Konfiguration",
