--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -566,6 +566,8 @@
 	"edt_conf_fw_proto_itemtitle" : "Proto target",
 	"edt_conf_js_heading_title" : "JSON Server",
 	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
+	"edt_conf_fbs_timeout_title" : "Timeout",
+	"edt_conf_fbs_timeout_expl" : "If no data are received for the given period, the component will be (soft) disabled.",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Address",
