--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -21,6 +21,7 @@
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
 	"general_comp_FLATBUFSERVER" : "Flatbuffers Server",
+	"general_comp_PROTOSERVER" : "Protocol Buffers Server",
 	"general_comp_GRABBER" : "Plattform Aufnahme",
 	"general_comp_V4L" : "USB Aufnahme",
 	"general_comp_LEDDEVICE" : "LED Hardware",
@@ -48,7 +49,7 @@
 	"dashboard_infobox_label_latesthyp" : "Aktuellste Hyperion Version:",
 	"dashboard_infobox_label_platform" : "Plattform:",
 	"dashboard_infobox_label_instance" : "Instanz:",
-	"dashboard_infobox_label_ports" : "Port flatbuf:",
+	"dashboard_infobox_label_ports" : "Ports (flat|proto):",
 	"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 	"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion Status:",
@@ -169,6 +170,7 @@
 	"conf_network_bobl_intro" : "Boblight Empfänger",
 	"conf_network_udpl_intro" : "UDP Empfänger",
 	"conf_network_fbs_intro" : "Google Flatbuffers Empfänger. Wird genutzt für schnellen Bildempfang.",
+	"conf_network_proto_intro" : "Der PROTO-Port dieser Hyperion-Instanz, wird genutzt für \"Bildstreams\" (HyperionScreenCap, Kodi Addon, ...)",
 	"conf_network_forw_intro" : "Leite alles an eine zweite Hyperion Instanz weiter, diese kann dann mit einer anderen LED Steuerung genutzt werden",
 	"conf_logging_label_intro" : "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
 	"conf_logging_btn_pbupload" : "Bericht für Supportanfrage hochladen",
@@ -572,6 +574,9 @@
 	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
 	"edt_conf_fbs_timeout_title" : "Zeitüberschreitung",
 	"edt_conf_fbs_timeout_expl" : "Wenn für die angegebene Zeit keine Daten empfangen werden, wird die Komponente (vorübergehend) deaktiviert",
+	"edt_conf_pbs_heading_title" : "Protocol Buffers Server",
+	"edt_conf_pbs_timeout_title" : "Zeitüberschreitung",
+	"edt_conf_pbs_timeout_expl" : "Wenn für die angegebene Zeit keine Daten empfangen werden, wird die Komponente (vorübergehend) deaktiviert",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Adresse",
