--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -21,6 +21,7 @@
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
 	"general_comp_FLATBUFSERVER" : "Flatbuffers Server",
+	"general_comp_PROTOSERVER" : "Protocol Buffers Server",
 	"general_comp_GRABBER" : "Platform Capture",
 	"general_comp_V4L" : "USB Capture",
 	"general_comp_LEDDEVICE" : "LED device",
@@ -48,7 +49,7 @@
 	"dashboard_infobox_label_latesthyp" : "Latest Hyperion version:",
 	"dashboard_infobox_label_platform" : "Platform:",
 	"dashboard_infobox_label_instance" : "Instance:",
-	"dashboard_infobox_label_ports" : "Port flatbuf:",
+	"dashboard_infobox_label_ports" : "Ports (flat|proto):",
 	"dashboard_infobox_message_updatewarning" : "A newer version of Hyperion is available! ($1)",
 	"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion status:",
@@ -169,6 +170,7 @@
 	"conf_network_bobl_intro" : "Receiver for Boblight",
 	"conf_network_udpl_intro" : "Receiver for UDP",
 	"conf_network_fbs_intro" : "Google Flatbuffers Receiver. Used for fast image transmission.",
+	"conf_network_proto_intro" : "The PROTO-Port of this Hyperion instance, used for picture streams (HyperionScreenCap, Kodi Addon, ...)",
 	"conf_network_forw_intro" : "Forward all input to a second Hyperion instance which could be driven with another led controller",
 	"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
 	"conf_logging_btn_pbupload" : "Upload report for support request",
@@ -573,6 +575,9 @@
 	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
 	"edt_conf_fbs_timeout_title" : "Timeout",
 	"edt_conf_fbs_timeout_expl" : "If no data are received for the given period, the component will be (soft) disabled.",
+	"edt_conf_pbs_heading_title" : "Protocol Buffers Server",
+	"edt_conf_pbs_timeout_title" : "Timeout",
+	"edt_conf_pbs_timeout_expl" : "If no data are received for the given period, the component will be (soft) disabled.",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Address",
