--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -348,7 +348,7 @@
 	"wiz_cc_morethanone" : "You have more than one profile, please choose the profile you want to calibrate.",
 	"wiz_cc_btn_stop" : "Stop video",
 	"wiz_cc_summary" : "A conclusion of your settings. During video playback, you could change or test values again. If you are done, click on save.",
-	"edt_dev_auth_key_title" : "Aurora API Key",
+	"edt_dev_auth_key_title" : "Authentication Token",
 	"edt_dev_enum_subtract_minimum" : "Substract minimum",
 	"edt_dev_enum_sub_min_cool_adjust" : "Subtract cool white",
 	"edt_dev_enum_sub_min_warm_adjust" : "Subtract warm white",
