--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -432,6 +432,7 @@
 	"edt_conf_enum_bbdefault" : "Standard",
 	"edt_conf_enum_bbclassic" : "Klassisch",
 	"edt_conf_enum_bbosd" : "OSD",
+	"edt_conf_enum_automatic" : "Automatisch",
 	"edt_conf_gen_heading_title" : "Allgemeine Einstellungen",
 	"edt_conf_gen_name_title" : "Name der Konfiguration",
 	"edt_conf_gen_name_expl" : "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
