--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -433,6 +433,7 @@
 	"edt_conf_enum_bbdefault" : "Default",
 	"edt_conf_enum_bbclassic" : "Classic",
 	"edt_conf_enum_bbosd" : "OSD",
+	"edt_conf_enum_automatic" : "Automatic",
 	"edt_conf_gen_heading_title" : "General Settings",
 	"edt_conf_gen_name_title" : "Configuration name",
 	"edt_conf_gen_name_expl" : "A user defined name which is used to detect Hyperion. (Helpful with more than one Hyperion instance)",
