WebUI: Update Check, Cleanup and Hyperion Switcher IPv6 Fix
Update Check:
- New Property which allows you to select stable or beta branch checks.
- This would rely on current versions.json. It selects the first version in list with you branch (stable, beta). If it is newer hyperion tells you that a update is available
- For this we should keep our deployment pipeline in mind to format the json this way.

Cleanup:
- I cleaned up the WebUI from dead links and the support page with the affiliate links and donation adresses as we don't have them under our control. Currently only disabled, not deleated

Switcher:
- If the address which is published via bonjour serve is IPv6 the Switcher was bugged. Fixed that.

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -50,6 +50,7 @@
 	"dashboard_infobox_label_platform" : "Plattform:",
 	"dashboard_infobox_label_instance" : "Instanz:",
 	"dashboard_infobox_label_ports" : "Ports (flat|proto):",
+	"dashboard_infobox_label_versionbranch" : "Versionszweig:",
 	"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 	"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion Status:",
@@ -260,7 +261,7 @@
 	"about_builddate" : "Build Datum",
 	"about_translations" : "Übersetzungen",
 	"about_resources" : "$1 Bibliotheken",
-	"about_contribute" : "Übersetze Hyperion in weitere Sprachen!",
+	"about_contribute" : "Entwickel Hyperion mit uns weiter!",
 	"about_credits" : "Einen Dank an alle Entwickler!",
 	"info_conlost_label_title" : "Verbindung zum Hyperion Service unterbrochen!",
 	"info_conlost_label_reason" : "Mögliche Ursachen:",
@@ -438,6 +439,8 @@
 	"edt_conf_gen_name_expl" : "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
 	"edt_conf_gen_showOptHelp_title" : "Zeige Erklärungen",
 	"edt_conf_gen_showOptHelp_expl" : "Zeige alle verfügbaren Options-Erklärungen. Empfohlen für Anfänger",
+	"edt_conf_gen_versionBranch_title" : "Versionszweig",
+	"edt_conf_gen_versionBranch_expl" : "Gibt an, welcher Versionszweig für die Suche von neuen Hyperion Versionen genutzt werden soll.",
 	"edt_conf_color_heading_title" : "Farbkalibrierung",
 	"edt_conf_color_channelAdjustment_header_title" : "Anpassung Farbkanäle",
 	"edt_conf_color_channelAdjustment_header_itemtitle" : "Profil",
