--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -50,6 +50,7 @@
 	"dashboard_infobox_label_platform" : "Platform:",
 	"dashboard_infobox_label_instance" : "Instance:",
 	"dashboard_infobox_label_ports" : "Ports (flat|proto):",
+	"dashboard_infobox_label_versionbranch" : "Version Branch:",
 	"dashboard_infobox_message_updatewarning" : "A newer version of Hyperion is available! ($1)",
 	"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion status:",
@@ -60,7 +61,7 @@
 	"dashboard_componentbox_label_comp" : "Component",
 	"dashboard_componentbox_label_status" : "Status",
 	"dashboard_newsbox_label_title" : "Hyperion-Blog",
-    "dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
+	"dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Can't connect to Hyperion Server to retrieve latest posts, does your internet connection work?",
 	"dashboard_newsbox_readmore" : "Read more",
 	"dashboard_alert_message_confedit_t" : "Configuration modified",
@@ -260,7 +261,7 @@
 	"about_builddate" : "Build date",
 	"about_translations" : "Translations",
 	"about_resources" : "$1 libraries",
-	"about_contribute" : "Add more languages to Hyperion!",
+	"about_contribute" : "Develop Hyperion further with us!",
 	"about_credits" : "Credits to all these developers!",
 	"info_conlost_label_title" : "Lost connection to Hyperion service!",
 	"info_conlost_label_reason" : "Possible reasons:",
@@ -439,6 +440,8 @@
 	"edt_conf_gen_name_expl" : "A user defined name which is used to detect Hyperion. (Helpful with more than one Hyperion instance)",
 	"edt_conf_gen_showOptHelp_title" : "Show explanations",
 	"edt_conf_gen_showOptHelp_expl" : "Show all available explanations in each section. Highly recommended for beginners!",
+	"edt_conf_gen_versionBranch_title" : "Version Branch",
+	"edt_conf_gen_versionBranch_expl" : "Selects which version branch should be used for searching new Hyperion versions.",
 	"edt_conf_color_heading_title" : "Color Calibration",
 	"edt_conf_color_channelAdjustment_header_itemtitle" : "Profile",
 	"edt_conf_color_channelAdjustment_header_title" : "Color channel adjustments",
