- The first part - Added CodeDocs config file for customization - Fixing LGTM alerts - LGTM bug fixed again - added token option to hyperion-remote - fix DBManager::getDB() - next bugfix - correct broken signal from SettingManager to Hyperion - Token list is created after the schema is fetched
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -33,6 +33,7 @@
     "general_btn_ok": "OK",
     "general_btn_cancel": "Abbrechen",
     "general_btn_continue": "Fortfahren",
+    "general_btn_delete" : "Löschen",
     "general_btn_save": "Speichern",
     "general_btn_saverestart": "Speichern und neustarten",
     "general_btn_saveandreload": "Speichern und neu laden",
@@ -99,6 +100,14 @@
     "conf_general_impexp_l2": "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
     "conf_general_impexp_impbtn": "Importieren",
     "conf_general_impexp_expbtn": "Exportieren",
+    "conf_general_tok_title" : "Token Management",
+    "conf_general_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
+    "conf_general_tok_cidhead" : "Beschreibung",
+    "conf_general_tok_lastuse" : "Zuletzt genutzt",
+    "conf_general_tok_comment_title" : "Token Beschreibung",
+    "conf_general_createToken_btn" : "Erstelle Token",
+    "conf_general_tok_diaTitle" : "Neues Token erstellt!",
+    "conf_general_tok_diaMsg" : "Hier ist dein neues Token, welches für den Zugriff auf die Hyperion API verwendet werden kann. Aus Sicherheitsgründen können Tokens nach der Erstellung nur einmalig eingesehen werden, notiere es dir daher jetzt.",
     "conf_helptable_option": "Option",
     "conf_helptable_expl": "Erklärung",
     "conf_effect_path_intro": "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
@@ -167,6 +176,7 @@
     "conf_colors_color_intro": "Erstelle Kalibrierungsprofile die einzelnen Komponenten zugewisen werden können. Passe dabei Farben, Gamma, Helligkeit, Kompensation und mehr an.",
     "conf_colors_smoothing_intro": "Glätte den Farbverlauf und Helligkeitsänderungen um nicht von schnellen Übergängen abgelenkt zu werden.",
     "conf_colors_blackborder_intro": "Ignoriere schwarze Balken, jeder Modus nutzt einen anderen Algorithmus um diese zu erkennen. Erhöhe die Schwelle, sollte es nicht funktionieren.",
+    "conf_network_net_intro" : "Einstellungen zum Netzwerk die für alle Netzwerk-Dienste gelten",
     "conf_network_json_intro": "Der JSON-RPC-Port dieser Hyperion-Instanz, wird genutzt zur Fernsteuerung.",
     "conf_network_bobl_intro": "Boblight Empfänger",
     "conf_network_udpl_intro": "UDP Empfänger",
@@ -575,6 +585,16 @@
     "edt_conf_fw_proto_title": "Liste von Proto zielen",
     "edt_conf_fw_proto_expl": "Ein Proto Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19401)",
     "edt_conf_fw_proto_itemtitle": "Proto Ziel",
+    "edt_conf_net_heading_title" : "Network",
+    "edt_conf_net_internetAccessAPI_title":"Internet API Zugriff",
+    "edt_conf_net_internetAccessAPI_expl":"Erlaube Zugriff auf die Hyperion API/Webinterface aus dem Internet, deaktivieren für höhere Sicherheit.",
+    "edt_conf_net_ipWhitelist_title":"Erlaubte IP's",
+    "edt_conf_net_ipWhitelist_expl":"Anstatt den Zugriff für alle Verbindungen aus dem Internet zu erlauben kannst du hier Ausnahmen für zugelassene IP Adressen hinzufügen.",
+    "edt_conf_net_ip_itemtitle":"IP",
+    "edt_conf_net_apiAuth_title":"API Authentifizierung",
+    "edt_conf_net_apiAuth_expl":"Zwinge alle Anwendungen welche die Hyperion API nutzen sich zu authentifizieren. Aktivieren für höhere Sicherheit, da nun jede neue Anwendung einmalig von dir bestätigt werden muss.",
+    "edt_conf_net_localApiAuth_title" : "Lokale API Authentifizierung",
+    "edt_conf_net_localApiAuth_expl" : "Wenn aktiviert, müssen Verbindungen aus dem Heimnetzwerk mit einem Token authentifiziert werden.",
     "edt_conf_js_heading_title": "JSON Server",
     "edt_conf_fbs_heading_title": "Flatbuffers Server",
     "edt_conf_fbs_timeout_title": "Zeitüberschreitung",
