--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -32,6 +32,7 @@
 	"general_btn_yes" : "Yes",
 	"general_btn_ok" : "OK",
 	"general_btn_cancel" : "Cancel",
+	"general_btn_delete" : "Delete",
 	"general_btn_continue" : "Continue",
 	"general_btn_save" : "Save",
 	"general_btn_saverestart" : "Save and restart",
@@ -99,6 +100,14 @@
 	"conf_general_impexp_l2" : "Export a configuration by clicking on \"Export\". Your browser starts a download.",
 	"conf_general_impexp_impbtn" : "Import",
 	"conf_general_impexp_expbtn" : "Export",
+	"conf_general_tok_title" : "Token management",
+	"conf_general_tok_desc" : "Tokens grant other applications access to the Hyperion API, an application can request a token where you need to accept it or you create them on your own below. These tokens are just required when \"API Authorization\" is enabled in network settings.",
+	"conf_general_tok_cidhead" : "Description",
+	"conf_general_tok_lastuse" : "Last use",
+	"conf_general_tok_comment_title" : "Token description",
+	"conf_general_createToken_btn" : "Create Token",
+	"conf_general_tok_diaTitle" : "New Token created!",
+	"conf_general_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
 	"conf_effect_path_intro" : "Load effects from the defined paths. Additional you can disable single effects by name to hide them from all effect lists.",
@@ -167,6 +176,7 @@
 	"conf_colors_color_intro" : "Create one or more calibration profiles, adjust each color, brightness, linearization and more.",
 	"conf_colors_smoothing_intro" : "Smoothing flattens color/brightness changes to reduce annoying distraction.",
 	"conf_colors_blackborder_intro" : "Skip black bars wherever they are. Each mode use another detection algorithm which is tuned for special situations. Higher the threshold if it doesn't work for you.",
+	"conf_network_net_intro" : "Network related settings which are applied to all network services.",
 	"conf_network_json_intro" : "The JSON-RPC-Port of this Hyperion instance, used for remote control.",
 	"conf_network_bobl_intro" : "Receiver for Boblight",
 	"conf_network_udpl_intro" : "Receiver for UDP",
@@ -575,6 +585,16 @@
 	"edt_conf_fw_proto_title" : "List of proto clients",
 	"edt_conf_fw_proto_expl" : "One proto target per line. Contains IP:PORT (Example: 127.0.0.1:19401)",
 	"edt_conf_fw_proto_itemtitle" : "Proto target",
+	"edt_conf_net_heading_title" : "Network",
+	"edt_conf_net_internetAccessAPI_title":"Internet API Access",
+	"edt_conf_net_internetAccessAPI_expl":"Allow access to the Hyperion API/Webinterface from the internet, disable for higher security.",
+	"edt_conf_net_ipWhitelist_title":"Whitelisted IP's",
+	"edt_conf_net_ipWhitelist_expl":"You can whitelist IP addresses instead allowing all connections from internet to connect to the Hyperion API/Webinterface.",
+	"edt_conf_net_ip_itemtitle":"IP",
+	"edt_conf_net_apiAuth_title":"API Authentication",
+	"edt_conf_net_apiAuth_expl":"Enforce all applications that use the Hyperion API to authenticate themself against Hyperion. Higher security, as you control the access and revoke it at any time.",
+	"edt_conf_net_localApiAuth_title" : "Local API Authentication",
+	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion too.",
 	"edt_conf_js_heading_title" : "JSON Server",
 	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
 	"edt_conf_fbs_timeout_title" : "Timeout",
