--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -50,7 +50,7 @@
     "dashboard_infobox_label_platform": "Plattform:",
     "dashboard_infobox_label_instance": "Instanz:",
     "dashboard_infobox_label_ports": "Ports (flat|proto):",
-    "dashboard_infobox_label_versionbranch": "Versionszweig:",
+    "dashboard_infobox_label_watchedversionbranch": "Ausgewählter Versionszweig:",
     "dashboard_infobox_message_updatewarning": "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
     "dashboard_infobox_message_updatesuccess": "Du nutzt die aktuellste Version von Hyperion.",
     "dashboard_infobox_label_statush": "Hyperion Status:",
@@ -441,8 +441,8 @@
     "edt_conf_gen_name_expl": "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
     "edt_conf_gen_showOptHelp_title": "Zeige Erklärungen",
     "edt_conf_gen_showOptHelp_expl": "Zeige alle verfügbaren Options-Erklärungen. Empfohlen für Anfänger",
-    "edt_conf_gen_versionBranch_title": "Versionszweig",
-    "edt_conf_gen_versionBranch_expl": "Gibt an, welcher Versionszweig für die Suche von neuen Hyperion Versionen genutzt werden soll.",
+    "edt_conf_gen_watchedVersionBranch_title": "Ausgewählter Versionszweig",
+    "edt_conf_gen_watchedVersionBranch_expl": "Gibt an, welcher Versionszweig für die Suche von neuen Hyperion Versionen genutzt werden soll.",
     "edt_conf_color_heading_title": "Farbkalibrierung",
     "edt_conf_color_channelAdjustment_header_itemtitle": "Profil",
     "edt_conf_color_channelAdjustment_header_title": "Anpassung Farbkanäle",
