--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -50,7 +50,7 @@
 	"dashboard_infobox_label_platform" : "Platform:",
 	"dashboard_infobox_label_instance" : "Instance:",
 	"dashboard_infobox_label_ports" : "Ports (flat|proto):",
-	"dashboard_infobox_label_versionbranch" : "Version Branch:",
+	"dashboard_infobox_label_watchedversionbranch" : "Watched version branch:",
 	"dashboard_infobox_message_updatewarning" : "A newer version of Hyperion is available! ($1)",
 	"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion status:",
@@ -441,8 +441,8 @@
 	"edt_conf_gen_name_expl" : "A user defined name which is used to detect Hyperion. (Helpful with more than one Hyperion instance)",
 	"edt_conf_gen_showOptHelp_title" : "Show explanations",
 	"edt_conf_gen_showOptHelp_expl" : "Show all available explanations in each section. Highly recommended for beginners!",
-	"edt_conf_gen_versionBranch_title" : "Version Branch",
-	"edt_conf_gen_versionBranch_expl" : "Selects which version branch should be used for searching new Hyperion versions.",
+	"edt_conf_gen_watchedVersionBranch_title" : "Watched version branch",
+	"edt_conf_gen_watchedVersionBranch_expl" : "Selects which version branch should be used for searching new Hyperion versions.",
 	"edt_conf_color_heading_title" : "Color Calibration",
 	"edt_conf_color_channelAdjustment_header_itemtitle" : "Profile",
 	"edt_conf_color_channelAdjustment_header_title" : "Color channel adjustments",
