second part of PR #578
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -31,11 +31,12 @@
 	"general_button_savesettings" : "Save settings",
 	"general_btn_yes" : "Yes",
 	"general_btn_ok" : "OK",
+	"general_btn_start" : "Start",
+	"general_btn_stop" : "Stop",
 	"general_btn_cancel" : "Cancel",
 	"general_btn_delete" : "Delete",
 	"general_btn_continue" : "Continue",
 	"general_btn_save" : "Save",
-	"general_btn_saverestart" : "Save and restart",
 	"general_btn_saveandreload" : "Save and reload",
 	"general_btn_restarthyperion" : "Restart Hyperion",
 	"general_btn_off" : "Off",
@@ -67,8 +68,8 @@
 	"dashboard_newsbox_readmore" : "Read more",
 	"dashboard_alert_message_confedit_t" : "Configuration modified",
 	"dashboard_alert_message_confedit" : "Your Hyperion configuration has been modified. To apply it, restart Hyperion.",
-	"dashboard_alert_message_disabled_t" : "Hyperion disabled",
-	"dashboard_alert_message_disabled" : "Hyperion is currently disabled! To use it again, enable it at the dashboard.",
+	"dashboard_alert_message_disabled_t" : "LED hardware instance disabled",
+	"dashboard_alert_message_disabled" : "This instance is currently disabled! To use it again, enable it at the dashboard.",
 	"dashboard_alert_message_confsave_success_t" : "Configuration saved",
 	"dashboard_alert_message_confsave_success" : "Your Hyperion configuration has been saved successfully. Your changes are now active.",
 	"main_menu_dashboard_token" : "Dashboard",
@@ -100,7 +101,7 @@
 	"conf_general_impexp_l2" : "Export a configuration by clicking on \"Export\". Your browser starts a download.",
 	"conf_general_impexp_impbtn" : "Import",
 	"conf_general_impexp_expbtn" : "Export",
-	"conf_general_tok_title" : "Token management",
+	"conf_general_tok_title" : "Token Management",
 	"conf_general_tok_desc" : "Tokens grant other applications access to the Hyperion API, an application can request a token where you need to accept it or you create them on your own below. These tokens are just required when \"API Authorization\" is enabled in network settings.",
 	"conf_general_tok_cidhead" : "Description",
 	"conf_general_tok_lastuse" : "Last use",
@@ -108,6 +109,14 @@
 	"conf_general_createToken_btn" : "Create Token",
 	"conf_general_tok_diaTitle" : "New Token created!",
 	"conf_general_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
+	"conf_general_inst_title" : "LED Hardware Instance Management",
+	"conf_general_inst_desc" : "Use different LED hardware at the same time. Each instance runs independent of each other which allows different LED layouts and calibration settings. Running instances are available at the top icon bar",
+	"conf_general_inst_namehead" : "Instance name",
+	"conf_general_inst_actionhead" : "Action",
+	"conf_general_inst_name_title" : "New Instance name",
+	"conf_general_createInst_btn" : "Create Instance",
+	"conf_general_inst_delreq_h" : "Delete LED Hardware instance",
+	"conf_general_inst_delreq_t" : "Are you sure that you want to delete instance \"$1\"? All settings will be deleted too.",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
 	"conf_effect_path_intro" : "Load effects from the defined paths. Additional you can disable single effects by name to hide them from all effect lists.",
@@ -592,7 +601,7 @@
 	"edt_conf_net_ipWhitelist_expl":"You can whitelist IP addresses instead allowing all connections from internet to connect to the Hyperion API/Webinterface.",
 	"edt_conf_net_ip_itemtitle":"IP",
 	"edt_conf_net_apiAuth_title":"API Authentication",
-	"edt_conf_net_apiAuth_expl":"Enforce all applications that use the Hyperion API to authenticate themself against Hyperion. Higher security, as you control the access and revoke it at any time.",
+	"edt_conf_net_apiAuth_expl":"Enforce all applications that use the Hyperion API to authenticate themself against Hyperion (Exception see \"Local API Authentication\"). Higher security, as you control the access and revoke it at any time.",
 	"edt_conf_net_localApiAuth_title" : "Local API Authentication",
 	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion too.",
 	"edt_conf_js_heading_title" : "JSON Server",
