Global Setting Information on Instances
If a setting page is only changeable globally and instance != 0 is set a notification is shown
thanks @b1rdhous3

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -70,8 +70,10 @@
 	"dashboard_alert_message_confedit": "Deine Hyperion Konfiguration wurde verändert. Um die Änderungen anzuwenden, starte Hyperion neu.",
 	"dashboard_alert_message_disabled_t" : "LED Hardware instanz deaktiviert",
 	"dashboard_alert_message_disabled" : "Diese Instanz ist momentan deaktiviert! Um sie zu nutzen, musst du sie zuerst wieder im Dashboard aktivieren.",
-	"dashboard_alert_message_confsave_success_t": "Konfiguration gespeichert",
-	"dashboard_alert_message_confsave_success": "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
+	"dashboard_alert_message_confsave_success_t" : "Konfiguration gespeichert",
+	"dashboard_alert_message_confsave_success" : "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
+	"dashboard_message_global_setting_t": "Instanzunabhängige Einstellung",
+	"dashboard_message_global_setting": "Die Einstellungen auf dieser Seite sind instanzunabhängig. Änderungen werden global übernommen.",
 	"main_menu_dashboard_token": "Dashboard",
 	"main_menu_configuration_token": "Konfiguration",
 	"main_menu_general_conf_token": "Allgemein",
