--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -71,6 +71,8 @@
 	"dashboard_alert_message_disabled" : "This instance is currently disabled! To use it again, enable it at the dashboard.",
 	"dashboard_alert_message_confsave_success_t" : "Configuration saved",
 	"dashboard_alert_message_confsave_success" : "Your Hyperion configuration has been saved successfully. Your changes are now active.",
+	"dashboard_message_global_setting_t": "Instance independent setting",
+	"dashboard_message_global_setting": "The settings on this page are not depending on a specific instance. Changes will be stored globally for all instances.",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Configuration",
 	"main_menu_general_conf_token" : "General",
