Moved Token Management to Network Setting
* Moved Token Management to Network Settings

* Fixed alignment of Token Settings Div if Help Tables are switched off

* Added Chars counter, new format of the div panel (footer), change i18n

* Added Explanation for Token Management

* Moved Token Management to Network Settings

* Fixed alignment of Token Settings Div if Help Tables are switched off

* Added Chars counter, new format of the div panel (footer), change i18n

* Added Explanation for Token Management

* i18n Fix

* Revert "i18n Fix"

This reverts commit 0186290689d8b140310d5376617a3d43429bb632.

* i18n Fix

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -103,14 +103,6 @@
 	"conf_general_impexp_l2": "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
 	"conf_general_impexp_impbtn": "Importieren",
 	"conf_general_impexp_expbtn": "Exportieren",
-	"conf_general_tok_title" : "Token Management",
-	"conf_general_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
-	"conf_general_tok_cidhead" : "Beschreibung",
-	"conf_general_tok_lastuse" : "Zuletzt genutzt",
-	"conf_general_tok_comment_title" : "Token Beschreibung",
-	"conf_general_createToken_btn" : "Erstelle Token",
-	"conf_general_tok_diaTitle" : "Neues Token erstellt!",
-	"conf_general_tok_diaMsg" : "Hier ist dein neues Token, welches für den Zugriff auf die Hyperion API verwendet werden kann. Aus Sicherheitsgründen können Tokens nach der Erstellung nur einmalig eingesehen werden, notiere es dir daher jetzt.",
 	"conf_helptable_option": "Option",
 	"conf_helptable_expl": "Erklärung",
 	"conf_effect_path_intro": "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
@@ -185,6 +177,16 @@
 	"conf_network_fbs_intro": "Google Flatbuffers Empfänger. Wird genutzt für schnellen Bildempfang.",
 	"conf_network_proto_intro": "Der PROTO-Port aller Hyperion-Instanzen, wird genutzt für \"Bildstreams\" (HyperionScreenCap, Kodi Addon, Android Hyperion Grabber, ...)",
 	"conf_network_forw_intro": "Leite alles an eine zweite Hyperion Instanz weiter, diese kann dann mit einer anderen LED Steuerung genutzt werden",
+	"conf_network_tok_title" : "Token Management",
+	"conf_network_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
+	"conf_network_tok_cidhead" : "Beschreibung",
+	"conf_network_tok_lastuse" : "Zuletzt genutzt",
+	"conf_network_tok_chars_needed" : "weitere Zeichen benötigt",
+	"conf_network_tok_comment_title" : "Token Beschreibung",
+	"conf_network_createToken_btn" : "Erstelle Token",
+	"conf_network_tok_diaTitle" : "Neues Token erstellt!",
+	"conf_network_tok_diaMsg" : "Hier ist dein neues Token, welches für den Zugriff auf die Hyperion API verwendet werden kann. Aus Sicherheitsgründen können Tokens nach der Erstellung nur einmalig eingesehen werden, notiere es dir daher jetzt.",
+	"conf_network_tok_intro" : "Hier kannst du Token zur API Authentifizierung erstellen oder löschen. Neu erstellte Token werden einmalig angezeigt.",
 	"conf_logging_label_intro": "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
 	"conf_logging_btn_pbupload": "Bericht für Supportanfrage hochladen",
 	"conf_logging_btn_autoscroll": "Automatisch scrollen",
