--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -102,14 +102,6 @@
 	"conf_general_impexp_l2" : "Export a configuration by clicking on \"Export\". Your browser starts a download.",
 	"conf_general_impexp_impbtn" : "Import",
 	"conf_general_impexp_expbtn" : "Export",
-	"conf_general_tok_title" : "Token Management",
-	"conf_general_tok_desc" : "Tokens grant other applications access to the Hyperion API, an application can request a token where you need to accept it or you create them on your own below. These tokens are just required when \"API Authorization\" is enabled in network settings.",
-	"conf_general_tok_cidhead" : "Description",
-	"conf_general_tok_lastuse" : "Last use",
-	"conf_general_tok_comment_title" : "Token description",
-	"conf_general_createToken_btn" : "Create Token",
-	"conf_general_tok_diaTitle" : "New Token created!",
-	"conf_general_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
 	"conf_general_inst_title" : "LED Hardware Instance Management",
 	"conf_general_inst_desc" : "Use different LED hardware at the same time. Each instance runs independent of each other which allows different LED layouts and calibration settings. Running instances are available at the top icon bar",
 	"conf_general_inst_namehead" : "Instance name",
@@ -192,6 +184,16 @@
 	"conf_network_fbs_intro" : "Google Flatbuffers Receiver. Used for fast image transmission.",
 	"conf_network_proto_intro" : "The PROTO-Port of all Hyperion instances, used for picture streams (HyperionScreenCap, Kodi Addon, Android Hyperion Grabber, ...)",
 	"conf_network_forw_intro" : "Forward all input to a second Hyperion instance which could be driven with another led controller",
+	"conf_network_tok_title" : "Token Management",
+	"conf_network_tok_desc" : "Tokens grant other applications access to the Hyperion API, an application can request a token where you need to accept it or you create them on your own below. These tokens are just required when \"API Authorization\" is enabled in network settings.",
+	"conf_network_tok_cidhead" : "Description",
+	"conf_network_tok_lastuse" : "Last use",
+	"conf_network_tok_comment_title" : "Token description",
+	"conf_network_tok_chars_needed" : "more characters needed",
+	"conf_network_createToken_btn" : "Create Token",
+	"conf_network_tok_diaTitle" : "New Token created!",
+	"conf_network_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
+	"conf_network_tok_intro" : "Here you can create and delete tokens for API authentification. Created tokens will only be deisplayed once.",
 	"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
 	"conf_logging_btn_pbupload" : "Upload report for support request",
 	"conf_logging_btn_autoscroll" : "Auto scrolling",
