Instance names can now be renamed on the WebUI (incl. inst 0)
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -35,6 +35,7 @@
 	"general_btn_stop" : "Stop",
 	"general_btn_continue": "Fortfahren",
 	"general_btn_delete" : "Löschen",
+	"general_btn_rename" : "Umbenennen",
 	"general_btn_save": "Speichern",
 	"general_btn_saverestart": "Speichern und neustarten",
 	"general_btn_saveandreload": "Speichern und neu laden",
@@ -103,6 +104,15 @@
 	"conf_general_impexp_l2": "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
 	"conf_general_impexp_impbtn": "Importieren",
 	"conf_general_impexp_expbtn": "Exportieren",
+	"conf_general_inst_title" : "LED Hardware Instanzverwaltung",
+	"conf_general_inst_desc" : "Verwende mehrere LED Hardware gleichzeitig. Jede Instanz läuft unabhängig voneinander, wodurch unterschiedliche LED-Layouts und Kalibrierungseinstellungen möglich sind. Laufende Instanzen sind in der oberen Symbolleiste verfügbar.",
+	"conf_general_inst_namehead" : "Instanzname",
+	"conf_general_inst_actionhead" : "Aktionen",
+	"conf_general_inst_name_title" : "Neuer Instanzname",
+	"conf_general_createInst_btn" : "Instanz erstellen",
+	"conf_general_inst_renreq_t" : "Gib in das untere Feld deinen neuen Instanznamen ein.",
+	"conf_general_inst_delreq_h" : "LED Hardware Instanz löschen",
+	"conf_general_inst_delreq_t" : "Bist du Dir sicher, das du die Instanz \"$1\" löschen möchtest? Alle Einstellungen zu dieser Instanz gehen verloren.",
 	"conf_helptable_option": "Option",
 	"conf_helptable_expl": "Erklärung",
 	"conf_effect_path_intro": "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
