--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -34,6 +34,7 @@
 	"general_btn_stop" : "Stop",
 	"general_btn_cancel" : "Cancel",
 	"general_btn_delete" : "Delete",
+	"general_btn_rename" : "Rename",
 	"general_btn_continue" : "Continue",
 	"general_btn_save" : "Save",
 	"general_btn_saveandreload" : "Save and reload",
@@ -108,6 +109,7 @@
 	"conf_general_inst_actionhead" : "Action",
 	"conf_general_inst_name_title" : "New Instance name",
 	"conf_general_createInst_btn" : "Create Instance",
+	"conf_general_inst_renreq_t" : "Enter a new name for your instance in the field below.",
 	"conf_general_inst_delreq_h" : "Delete LED Hardware instance",
 	"conf_general_inst_delreq_t" : "Are you sure that you want to delete instance \"$1\"? All settings will be deleted too.",
 	"conf_helptable_option" : "Option",
