WebUi: 3rd Party Licenses Tweaks

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -290,6 +290,7 @@
 	"about_contribute": "Entwickel Hyperion mit uns weiter!",
 	"about_credits": "Einen Dank an alle Entwickler!",
 	"about_3rd_party_licenses": "Drittanbieter Lizenzen",
+	"about_3rd_party_licenses_error": "Wir hatten Probleme beim Laden der Drittanbieter Lizenzen aus dem Internet. Du findest diese in unserem GitHub Repository.",
 	"info_conlost_label_title": "Verbindung zum Hyperion Service unterbrochen!",
 	"info_conlost_label_reason": "Mögliche Ursachen:",
 	"info_conlost_label_reason1": "- Schlechte WLAN Verbindung",
