WebUi: Changing i18n tokens and adding catch event for connection error

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -45,6 +45,7 @@
 	"general_btn_next": "Weiter",
 	"general_btn_back": "Zurück",
 	"general_btn_iswitch": "Switch",
+	"general_chars_needed": "weitere Zeichen benötigt",
 	"general_wiki_moreto": "Mehr Informationen zu \"$1\" findest du in unserem Wiki",
 	"dashboard_label_intro": "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 	"dashboard_infobox_label_title": "Information",
@@ -113,7 +114,6 @@
 	"conf_general_inst_renreq_t" : "Gib in das untere Feld deinen neuen Instanznamen ein.",
 	"conf_general_inst_delreq_h" : "LED Hardware Instanz löschen",
 	"conf_general_inst_delreq_t" : "Bist du Dir sicher, das du die Instanz \"$1\" löschen möchtest? Alle Einstellungen zu dieser Instanz gehen verloren.",
-	"conf_general_inst_chars_needed" : "weitere Zeichen benötigt",
 	"conf_helptable_option": "Option",
 	"conf_helptable_expl": "Erklärung",
 	"conf_effect_path_intro": "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
@@ -192,7 +192,6 @@
 	"conf_network_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
 	"conf_network_tok_cidhead" : "Beschreibung",
 	"conf_network_tok_lastuse" : "Zuletzt genutzt",
-	"conf_network_tok_chars_needed" : "weitere Zeichen benötigt",
 	"conf_network_tok_comment_title" : "Token Beschreibung",
 	"conf_network_createToken_btn" : "Erstelle Token",
 	"conf_network_tok_diaTitle" : "Neues Token erstellt!",
