--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -44,6 +44,7 @@
 	"general_btn_next" : "Next",
 	"general_btn_back" : "Back",
 	"general_btn_iswitch" : "Switch",
+	"general_chars_needed": "more characters needed",
 	"general_wiki_moreto" : "More informations to \"$1\" at our Wiki",
 	"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 	"dashboard_infobox_label_title" : "Information",
@@ -112,7 +113,6 @@
 	"conf_general_inst_renreq_t" : "Enter a new name for your instance in the field below.",
 	"conf_general_inst_delreq_h" : "Delete LED Hardware instance",
 	"conf_general_inst_delreq_t" : "Are you sure that you want to delete instance \"$1\"? All settings will be deleted too.",
-	"conf_general_inst_chars_needed" : "more characters needed",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
 	"conf_effect_path_intro" : "Load effects from the defined paths. Additional you can disable single effects by name to hide them from all effect lists.",
@@ -192,7 +192,6 @@
 	"conf_network_tok_cidhead" : "Description",
 	"conf_network_tok_lastuse" : "Last use",
 	"conf_network_tok_comment_title" : "Token description",
-	"conf_network_tok_chars_needed" : "more characters needed",
 	"conf_network_createToken_btn" : "Create Token",
 	"conf_network_tok_diaTitle" : "New Token created!",
 	"conf_network_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
